Updates README and updates images
The project README describes the installation procedure and not the old
project it represented.

Replaced the images/icons

--- a/chrome/popup.html
+++ b/chrome/popup.html
@@ -13,6 +13,7 @@
   <body>
     <header class="header">
       <div class="header__container">
+        <img class="logo" src="icons/spellbook.svg" />
         <h1 class="h1 title">SpellSlinger</h1>
         <nav role="navigation" class="menu" aria-label="Main Menu">
         </nav>
